# textX

./: .gitattributes  .gitignore  .travis.yml  404.html  AUTHORS  AUTHORS.md  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  LICENSE.txt  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  TODO  index.html  install-all-dev.sh  install-dev.sh  install-test.sh  justfile  mkdocs.yml  pyproject.toml  requirements_dev.txt  runtests.sh  search.html  serve-docs.sh  setup.cfg  setup.py  sitemap.xml  textX.epub  textX.html  tmp.py  versions.json
.github/workflows/: ci-linux-ubuntu.yml  docs.yml  tests.yml
1.6/: 404.html  index.html  search.html
1.6/model/: index.html
1.6/parser_config/: index.html
1.6/textx_command/: index.html
1.7/: index.html
1.7/grammar/: index.html
1.7/ideas/: index.html
1.7/search/: search_index.json
1.8/: index.html  search.html  sitemap.xml  style.css
1.8/debugging/: index.html
1.8/error_handling/: index.html
1.8/grammar/: index.html
1.8/ideas/: index.html
1.8/metamodel/: index.html
1.8/model/: index.html
1.8/multimetamodel/: index.html
1.8/parser_config/: index.html
1.8/scoping/: index.html
1.8/search/: search_index.json
1.8/textx_command/: index.html
2.0/: index.html  search.html  sitemap.xml
2.0/debugging/: index.html
2.0/faq/: index.html
2.0/ideas/: index.html
2.0/parser_config/: index.html
2.0/scoping/: index.html
2.0/visualization/: index.html
2.1/: 404.html  index.html  sitemap.xml
2.1/error_handling/: index.html
2.1/faq-todo/: index.html
2.1/grammar/: index.html
2.1/howto/: index.html
2.1/ideas/: index.html
2.1/images/: robot.dot
2.1/metamodel/: index.html
2.1/model/: index.html
2.1/multimetamodel/: index.html
2.1/registration/: index.html
2.1/scoping/: index.html
2.1/textx_command/: index.html
2.2/: index.html  search.html
2.2/howto/: index.html
2.3/: 404.html  sitemap.xml
2.3/grammar/: index.html
2.3/ideas/: index.html
2.3/jinja/: index.html
2.3/process/: index.html
2.3/scaffolding/: index.html
3.0/: index.html  search.html  sitemap.xml
3.0/debugging/: index.html
3.0/error_handling/: index.html
3.0/faq-todo/: index.html
3.0/ideas/: index.html
3.0/model/: index.html
3.0/multimetamodel/: index.html
3.0/parser_config/: index.html
3.0/process/: index.html
3.0/registration/: index.html
3.0/rrel/: index.html
3.0/scaffolding/: index.html
3.0/scoping/: index.html
3.0/search/: search_index.json
3.0/textx_command/: index.html
3.0/visualization/: index.html
3.1/: index.html  search.html  sitemap.xml
3.1/debugging/: index.html
3.1/error_handling/: index.html
3.1/faq-todo/: index.html
3.1/grammar/: index.html
3.1/howto/: index.html
3.1/ideas/: index.html
3.1/jinja/: index.html
3.1/multimetamodel/: index.html
3.1/parser_config/: index.html
3.1/rrel/: index.html
3.1/scaffolding/: index.html
3.1/scoping/: index.html
3.1/search/: search_index.json
4.0/: 404.html  index.html  search.html
4.0/faq-todo/: index.html
4.0/jinja/: index.html
4.0/metamodel/: index.html
4.0/model/: index.html
4.0/parser_config/: index.html
4.0/registration/: index.html
4.0/scaffolding/: index.html
4.0/scoping/: index.html
4.0/visualization/: index.html
about/comparison/: index.html
about/contributing/: index.html
about/discuss/: index.html
about/license/: index.html
debugging/: index.html
development/: index.html  sitemap.xml
development/grammar/: index.html
development/ideas/: index.html
development/search/: search_index.json
docker/: Dockerfile  build.sh  publish.sh  test.sh
docs/: .gitignore  Makefile  book.toml  build.sh  conf.py  debugging.md  debugging.rst  error_handling.md  error_handling.rst  faq-todo.md  faq.md  features.md  features.rst  flake.nix  getting_started.md  getting_started.rst  grammar.md  grammar.rst  howto.md  index.md  index.rst  jinja.md  language.rst  make.bat  metamodel.md  metamodel.rst  model.md  model.rst  multimetamodel.md  parser_config.md  process.md  registration.md  rrel.md  scaffolding.md  scoping.md  serve.sh  style.css  syntax_metamodels.rst  textx_command.md  textxlang.rst  (+5 more)
docs/about/: comparison.md  contributing.md  discuss.md  license.md
docs/ideas/: README.md  domain_specific_visualization.md  language_modularization.md
docs/images/: base_types.dot
docs/src/: README.md  SUMMARY.md  contributing.md  debugging.md  error_handling.md  faq-todo.md  faq.md  grammar.md  jinja.md  license.md  metamodel.md  model.md  multimetamodel.md  process.md  references.bib  registration.md  scaffolding.md  scoping.md  (+2 more)
error_handling/: index.html
examples/: README.md
getting_started/: index.html
grammar/: index.html
latest/: 404.html  index.html  search.html  sitemap.xml  style.css
metamodel/: index.html
mkdocs/: search_index.json
model/: index.html
multimetamodel/: index.html
parser_config/: index.html
scoping/: index.html
search/: search_index.json
stable/: 404.html  index.html  search.html  sitemap.xml
tests/functional/registration/projects/data_dsl/: pyproject.toml  setup.cfg  setup.py
tests/functional/registration/projects/data_dsl/data_dsl/: Data.tx  __init__.py
tests/functional/registration/projects/data_dsl/tests/: test_data_dsl.py
tests/functional/registration/projects/data_dsl/tests/models/: types.etype  types_with_error.etype
tests/functional/registration/projects/flow_codegen/: pyproject.toml  setup.cfg  setup.py
tests/functional/registration/projects/flow_codegen/flow_codegen/: generators.py
tests/functional/subcommands/example_project/: pyproject.toml  setup.cfg  setup.py
tests/functional/subcommands/example_project/textx_subcommand_test/: cli.py
textx/: __init__.py  cli.py  const.py  exceptions.py  export.py  generators.py  lang.py  langapi.py  metamodel.py  model.py  model_kwargs.py  model_params.py  object_processors.py  parser.py  registration.py  rrel.py  scoping.py  scoping_tools.py  textx.py  textx.tx  uniq_chk.py
textx_command/: index.html
tutorial_basic/: index.html
visualization/: index.html
(+680 files in other folders)
